// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Checkbox component should match snapshot for active state 1`] = `
<DocumentFragment>
  <div
    class="autoplay"
  >
    <input
      id="autoplay-checkbox"
      type="checkbox"
      value="true"
    />
    <label
      for="autoplay-checkbox"
    >
      autoplay
    </label>
  </div>
</DocumentFragment>
`;

exports[`Checkbox component should match snapshot for default props 1`] = `
<DocumentFragment>
  <div
    class="default-checkbox__div"
  >
    <input
      id="default-checkbox"
      type="checkbox"
      value="true"
    />
    <label
      for="default-checkbox"
    >
      autoplay
    </label>
  </div>
</DocumentFragment>
`;

exports[`Checkbox component should match snapshot for inactive state 1`] = `
<DocumentFragment>
  <div
    class="autoplay"
  >
    <input
      id="autoplay-checkbox"
      type="checkbox"
      value="false"
    />
    <label
      for="autoplay-checkbox"
    >
      autoplay
    </label>
  </div>
</DocumentFragment>
`;
